--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SENDGRID_API_KEY=SG.335PlW3TQv6e5D43Q2VDtQ.Dqx4hX0VaU-ff7Wr6Wi3AxZ3vBwXa3wt-S-Q1ihGJp4
-VITE_API_BASE_URL=http://localhost:5000
+SENDGRID_API_KEY=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
 PORT=3000
+DATABASE_URL=postgresql://neondb_owner:npg_xayf8YBUd4cu@ep-noisy-forest-adbhvbz5-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
